--- a/webApi/backend/package.json
+++ b/webApi/backend/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0",
     "nodemon": "^3.1.1",
-    "supertest": "^7.0.0"
+    "supertest": "^7.0.0",
+    "xss-clean": "^0.1.4"
   }
 }
